--- a/ivascular.html
+++ b/ivascular.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style/fonts.css">
     <link rel="stylesheet" href="style/titleCase.css">
     <link rel="stylesheet" href="style/responsiveNav.css">
-    <title>Document</title>
+    <title>iVscular</title>
 </head>
 <body>
 
