--- a/saludPrevent.html
+++ b/saludPrevent.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style/titleCase.css">
     <link rel="stylesheet" href="style/responsiveNav.css">
     <link rel="stylesheet" href="style/fonts.css">
-    <title>Document</title>
+    <title>Salud Prevent</title>
 </head>
 <body>
 
