--- a/cases.html
+++ b/cases.html
@@ -31,7 +31,15 @@
     <script type="text/javascript">
       var navTemplate = Handlebars.templates["nav"];
 
-      document.getElementById("nav").innerHTML += navTemplate();
+        var data = {
+            home: 'Inicio',
+            mision: 'Mision',
+            approach: 'Enfoque',
+            team: 'Equipo',
+            cases: 'Proyectos'
+        }
+
+        document.getElementById('nav').innerHTML += navTemplate(data)
     </script>
 
     <script type="text/javascript">
@@ -168,7 +176,11 @@
     <script type="text/javascript">
       var footerTemplate = Handlebars.templates["footer"];
 
-      document.getElementById("form").innerHTML += footerTemplate();
+        var data = {
+            text_1: '¿Construimos algo grande juntos?'
+        }
+
+        document.getElementById('form').innerHTML += footerTemplate(data)
     </script>
 
     <script type="text/javascript" src="js/responsiveNavUtility.js"></script>
