--- a/century.html
+++ b/century.html
@@ -28,8 +28,16 @@
 
     <script type="text/javascript">
         var navTemplate = Handlebars.templates["nav"];
-  
-        document.getElementById("nav").innerHTML += navTemplate();
+
+        data = {
+            home: 'Inicio',
+            mision: 'Mision',
+            approach: 'Enfoque',
+            team: 'Equipo',
+            cases: 'Proyectos'
+        }
+
+        document.getElementById('nav').innerHTML += navTemplate(data)
       </script>
 
     <div id="title"></div>
@@ -84,7 +92,18 @@
     <script type="text/javascript">
         var footerTemplate = Handlebars.templates['footer'];
 
-        document.getElementById('form').innerHTML += footerTemplate()
+        var data = {
+            es: {
+                text_1: '¿Construimos algo grande juntos?'
+            },
+            en: {
+                text_1: 'Do we build something big together? '
+            }
+        }
+
+        //var language = localStorage.getItem('lang')
+
+        document.getElementById('form').innerHTML += footerTemplate(data['es'])
     </script>
 
     <script type="text/javascript" src="js/responsiveNavUtility.js"></script>
